2011-10-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Friendlier error message, add a <title> tag at the
	top of the output svg document.

2011-10-17  Christoph Bersch  <cbersch@users.sourceforge.net>

	* docs/doc2texi.el:  Handle presence of three nodes with the same key.

2011-10-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/specfun.c (humlik):
	Re-order code to avoid accessing an unitialized variable.

	* term/emf.trm (EMF_put_text):
	Re-order code to avoid accessing an unitialized variable.

	* src/command.c (else_command):  An else clause might either be
	processed by if_command() or else_command().  The latter was not
	correctly updating c_token.

	* src/misc.c (lf_load):  Tie maximum depth of load commands to
	STACK_DEPTH.

2011-10-13  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/titlepag.tex:  Revise the sections that 
	describe function plots to mention `set samples`.  Allow the table of
	builtin functions to split across pagebreaks in the TeX documentation.

	* src/wxterminal/gp_cairo.c: Decrease linewidth used by pdfcairo
	terminal for pattern fill.  This works around what seems to be a pdf
	bug in libcairo versions through at least 1.10.

	* src/fit.c (error_ex): Exit via int_error() so that it can walk
	through the list of XXX_reset_after_error() routines.

2011-10-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c: Bump default QUADTREE_GRANULARITY from 10 to 30.
	At 10, 24% of the CPU time for all.dem is spent in hidden line removal.
	At 30 this decreases to 12%, for roughly a 10% speed increase overall.

2011-10-10  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c src/datafile.h src/gadgets.h src/graphics.c
	src/graphics.h src/plot2d.c src/save.c src/set.c src/show.c
	demo/boxplot.dem docs/gnuplot.doc:

	Add new mode for the "with boxplot" plot style.
	If there is a 4th column in the using spec, the values in it it will