@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: tabulate.c,v 1.12 2011/05/05 04:13:29 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: tabulate.c,v 1.13 2011/10/25 05:10:58 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - tabulate.c */
@@ -67,11 +67,11 @@ output_number(double coord, int axis, char *buffer) {
      * "%s" in combination with any other character is treated
      * like a normal time format specifier and handled in time.c
      */
-    if (axis_array[axis].is_timedata &&
-        strcmp(axis_array[axis].formatstring, "%s") == 0) {
+    if (axis_array[axis].datatype == DT_TIMEDATE &&
+	strcmp(axis_array[axis].formatstring, "%s") == 0) {
 	gprintf(buffer, BUFFERSIZE, "%.0f", 1.0, coord);
     } else
-    if (axis_array[axis].is_timedata) {
+    if (axis_array[axis].datatype == DT_TIMEDATE) {
 	buffer[0] = '"';
 	gstrftime(buffer+1, BUFFERSIZE-1, axis_array[axis].formatstring, coord);
 	while (strchr(buffer,'\n')) {*(strchr(buffer,'\n')) = ' ';}
